<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff0f0"

    tools:context=".MainActivity"
    tools:ignore="ExtraText"
    android:id="@+id/drawerLayout"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigationView"
        app:headerLayout="@layout/headerfile"
        app:menu="@menu/sidemenu"
        android:layout_gravity="start"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/theme2"
            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title=""
            app:titleMarginStart="40dp"
            app:titleTextColor="@color/white"
            tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="211dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:fontFamily="serif"
        android:text="@string/allinone"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.697"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/playlist"
        android:text="@string/making_work_easier"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="125dp"
        android:layout_height="96dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/ic_allinonelogo" />
    // first row




    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="5dp"
            app:cardMaxElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/weather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/weatherimg"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/theme"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/weather"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/weatherimg"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/ic_weather_svgrepo_com" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="5dp"
            app:cardMaxElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/calculator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/calculatorimg"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/Calculator"
                    android:backgroundTint="@color/theme"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/calculatorimg"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/ic_calculator_svgrepo_com" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
    //second menu

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="5dp"
            app:cardMaxElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/calendarimg"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/theme"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/calendar"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/calendarimg"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/ic_calendar_svgrepo_com" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="5dp"
            app:cardMaxElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/pdf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pdfimg"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/theme"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/pdf_viewer"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/pdfimg"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/ic_pdf_svgrepo_com" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    //third menu

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="5dp"
            app:cardMaxElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/clock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/clockImg"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/theme"

                    android:fontFamily="sans-serif-medium"
                    android:text="@string/alarm_and_clock"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/clockImg"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/ic_clock_svgrepo_com" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="5dp"
            app:cardMaxElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/speech"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/speechimg"
                    android:backgroundTint="@color/theme"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="Text To Speech"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/speechimg"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/ic_radios_mic_svgrepo_com" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
    //fourth menu

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="5dp"
            app:cardMaxElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/todo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/todoimg"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/calendar"
                    android:backgroundTint="@color/theme"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/todoimg"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/ic_check_list_svgrepo_com" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>




</androidx.drawerlayout.widget.DrawerLayout>